#1343: status json success timestamp (#1347)