@@ -2,6 +2,7 @@ package com.devonfw.tools.ide.integrationtest;
 
 import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 import com.devonfw.tools.ide.url.model.folder.UrlRepository;
@@ -11,11 +12,16 @@ import com.devonfw.tools.ide.url.updater.JsonUrlUpdater;
 import com.devonfw.tools.ide.url.updater.UrlUpdater;
 
 /**
- * {@link JsonUrlUpdater} test mock for {@link UrlUpdater} using a single urlVersion.
+ * Test mock for {@link UrlUpdater} using a single tool version and distribution.
  */
 public class UrlUpdaterMockSingle extends UrlUpdaterMock {
 
-  private static final Set<String> versions = new HashSet<>(Arrays.asList("1.0"));
+  private static final Set<String> versions = new HashSet<>(List.of("1.0"));
+
+  @Override
+  protected Set<String> getVersions() {
+    return versions;
+  }
 
   @Override
   protected void addVersion(UrlVersion urlVersion) {
